# etl-pipeline-demo

./: .gitignore  README.md
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: infrastructure-stack.ts  pipeline_stack.ts
pipeline/: lambda_handler.py  model.py  pyproject.toml
pipeline/aws/: s3_client.py
pipeline/database/: database_client.py
pipeline/pipeline/aws/: s3_client.py
pipeline/pipeline/transformation/: aggregator.py
pipeline/tests/pipeline/transformation/: test_aggregator.py
sql/: table.psql
