[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Johannes König <koenig.nexus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.148"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pyright = "^1.1.373"
ruff = "^0.5.5"
boto3-stubs = {extras = ["s3"], version = "^1.34.133"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
